data/derived/comb/progs/unify/prog3483.ml.out
Characters 45-46:
  let base = 0 (+)   in
             ^
Error: This expression has type int
       This is not a function; it cannot be applied.
